--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="container">
         <div class="destination-container">
-            <div class="destination" id="greece">
+            <div class="destination" id="florida">
                 <h2>Florida</h2>
             </div>
 
